--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   backend-test:
-    name: Backend Tests
+    name: Backend Tests & Coverage
     runs-on: ubuntu-latest
 
     steps:
@@ -27,25 +27,36 @@ jobs:
           cd backend
           npm ci
 
-      - name: Run backend tests
-        run: |
-          cd backend
-          npm test
-
       - name: Run backend tests with coverage
         run: |
           cd backend
           npm run test:cov
 
-      - name: Upload backend coverage
+      - name: Display backend coverage summary
+        run: |
+          cd backend
+          echo "=== Backend Test Coverage Summary ==="
+          cat coverage/coverage-summary.json || echo "Coverage report not found"
+
+      - name: Upload backend coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
           files: ./backend/coverage/lcov.info
           flags: backend
+          name: backend-coverage
+        continue-on-error: true
+
+      - name: Comment PR with backend coverage
+        if: github.event_name == 'pull_request'
+        uses: romeovs/lcov-reporter-action@v0.3.1
+        with:
+          lcov-file: ./backend/coverage/lcov.info
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          delete-old-comments: true
         continue-on-error: true
 
   frontend-test:
-    name: Frontend Tests
+    name: Frontend Tests & Coverage
     runs-on: ubuntu-latest
 
     steps:
@@ -63,11 +74,6 @@ jobs:
         run: |
           cd frontend
           npm ci
-
-      - name: Run frontend tests
-        run: |
-          cd frontend
-          npm test
 
       - name: Run frontend tests with coverage
         run: |
@@ -75,48 +81,28 @@ jobs:
           npm run test:coverage
         continue-on-error: true
 
-      - name: Upload frontend coverage
+      - name: Display frontend coverage summary
+        run: |
+          cd frontend
+          echo "=== Frontend Test Coverage Summary ==="
+          if [ -f coverage/coverage-summary.json ]; then
+            cat coverage/coverage-summary.json
+          else
+            echo "Coverage report not found (tests may have been skipped)"
+          fi
+        continue-on-error: true
+
+      - name: Upload frontend coverage to Codecov
+        if: hashFiles('frontend/coverage/lcov.info') != ''
         uses: codecov/codecov-action@v3
         with:
           files: ./frontend/coverage/lcov.info
           flags: frontend
+          name: frontend-coverage
         continue-on-error: true
 
-  frontend-build:
-    name: Frontend Build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-          cache-dependency-path: frontend/package-lock.json
-
-      - name: Install frontend dependencies
-        run: |
-          cd frontend
-          npm ci
-
-      - name: Build frontend
-        run: |
-          cd frontend
-          npm run build
-
-      - name: Check for build errors
-        run: |
-          cd frontend
-          if [ ! -d ".next" ]; then
-            echo "Build failed - .next directory not found"
-            exit 1
-          fi
-
   lint:
-    name: Lint Code
+    name: Linting Checks
     runs-on: ubuntu-latest
 
     steps:
@@ -127,25 +113,70 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-
-      - name: Install backend dependencies
-        run: |
-          cd backend
-          npm ci
 
       - name: Lint backend
         run: |
           cd backend
-          npm run lint
-        continue-on-error: true
-
-      - name: Install frontend dependencies
-        run: |
-          cd frontend
           npm ci
+          echo "=== Backend Linting ==="
+          npm run lint
 
       - name: Lint frontend
         run: |
           cd frontend
+          npm ci
+          echo "=== Frontend Linting ==="
           npm run lint
-        continue-on-error: true
+
+  build:
+    name: Build Check
+    runs-on: ubuntu-latest
+    needs: [backend-test, frontend-test, lint]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Build frontend
+        run: |
+          cd frontend
+          npm ci
+          npm run build
+
+      - name: Verify build output
+        run: |
+          cd frontend
+          if [ ! -d ".next" ]; then
+            echo "❌ Build failed - .next directory not found"
+            exit 1
+          fi
+          echo "✅ Build successful"
+
+  ci-summary:
+    name: CI Summary
+    runs-on: ubuntu-latest
+    needs: [backend-test, frontend-test, lint, build]
+    if: always()
+
+    steps:
+      - name: Check CI Results
+        run: |
+          echo "=== CI Pipeline Summary ==="
+          echo "✅ Backend Tests: ${{ needs.backend-test.result }}"
+          echo "✅ Frontend Tests: ${{ needs.frontend-test.result }}"
+          echo "✅ Linting: ${{ needs.lint.result }}"
+          echo "✅ Build: ${{ needs.build.result }}"
+
+          if [[ "${{ needs.backend-test.result }}" == "failure" ]] || \
+             [[ "${{ needs.lint.result }}" == "failure" ]] || \
+             [[ "${{ needs.build.result }}" == "failure" ]]; then
+            echo " CI Pipeline Failed"
+            exit 1
+          fi
+
+          echo "✅ CI Pipeline Passed"
